Add tmux keybindings to move windows

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,9 +25,13 @@ set-window-option -g mode-keys vi
 # Enable mouse
 set -g mouse on
 
-# Shift Alt vim keys to swwitch windows
+# Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
+
+# Ctrl Shift Alt vim keys to move windows
+bind -n C-M-H swap-window -t -1
+bind -n C-M-L swap-window -t +1
 
 # Better key bindings for copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
