--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".local/share/catppuccin-lazygit"]
 	path = .local/share/catppuccin-lazygit
 	url = https://github.com/catppuccin/lazygit.git
+[submodule ".local/share/zsh-syntax-highlighting"]
+	path = .local/share/zsh-syntax-highlighting
+	url = https://github.com/catppuccin/zsh-syntax-highlighting.git
