--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,9 +31,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-set $lock $HOME/.config/i3/scripts/lock.sh
-exec --no-startup-id xss-lock --transfer-sleep-lock -- $lock
-bindsym $mod+o exec $lock
+bindsym $mod+o exec screen-lock
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -180,6 +178,7 @@ bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
 assign [class="^obsidian$"] → $ws3
+assign [class="^chromium$"] → $ws4
 assign [class="^Zotero$"] → $ws4
 assign [class="^Signal$"] → $ws5
 assign [class="^discord$"] → $ws6
