--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,10 +4,17 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # seamless tmux and vim navigation
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# color theme
-set -g @plugin 'catppuccin/tmux'
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+# color theme
+set -g @catppuccin_flavor "mocha"
+run ~/.local/share/catppuccin-tmux/catppuccin.tmux
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Set true color
 set -g default-terminal "tmux-256color"
