--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,26 +1,8 @@
-# tmux plugin manager
-set -g @plugin 'tmux-plugins/tpm'
-# sensible tmux defaults
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# seamless tmux and vim navigation
-set -g @plugin 'christoomey/vim-tmux-navigator'
-# yanking
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# color theme
-set -g @catppuccin_flavor "mocha"
-run ~/.local/share/catppuccin-tmux/catppuccin.tmux
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-
 # Set true color
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-# Start windows and panes at 1 instead of ß
+# Start windows and panes at 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
@@ -41,9 +23,10 @@ bind -n C-M-H swap-window -t -1
 bind -n C-M-L swap-window -t +1
 
 # Better key bindings for copy mode
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send-keys -X clear-selection
+bind-key -T copy-mode Y send-keys -X copy-pipe-and-cancel "tmux paste-buffer"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send-keys -X clear-selection
+bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "tmux paste-buffer"
 
 # Open panes in current directory
 unbind c
@@ -55,12 +38,22 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-# Key binding for reloading tmux config
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
-
 # tmux-sessionizer
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 
-# Initialize tmux plugin manager
-run '~/.config/tmux/plugins/tpm/tpm'
+# color scheme
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+set -g @catppuccin_window_text " #{b:pane_current_path}"
+set -g @catppuccin_status_background none
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+
+# Load plugins
+run '~/.config/tmux/plugins/catppuccin-tmux/catppuccin.tmux'
+run '~/.config/tmux/plugins/tmux-sensible/sensible.tmux'
+run '~/.config/tmux/plugins/vim-tmux-navigator/vim-tmux-navigator.tmux'
