--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule ".local/share/catppuccin-bat"]
 	path = .local/share/catppuccin-bat
 	url = https://github.com/catppuccin/bat.git
-[submodule ".config/tmux/plugins/tpm"]
-	path = .config/tmux/plugins/tpm
-	url = https://github.com/tmux-plugins/tpm.git
 [submodule ".local/share/catppuccin-lazygit"]
 	path = .local/share/catppuccin-lazygit
 	url = https://github.com/catppuccin/lazygit.git
@@ -16,3 +13,12 @@
 [submodule ".local/share/catppuccin-tmux"]
 	path = .local/share/catppuccin-tmux
 	url = https://github.com/catppuccin/tmux.git
+[submodule ".config/tmux/plugins/tmux-sensible"]
+	path = .config/tmux/plugins/tmux-sensible
+	url = https://github.com/tmux-plugins/tmux-sensible
+[submodule ".config/tmux/plugins/vim-tmux-navigator"]
+	path = .config/tmux/plugins/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
+[submodule ".config/tmux/plugins/catppuccin-tmux"]
+	path = .config/tmux/plugins/catppuccin-tmux
+	url = https://github.com/catppuccin/tmux
