--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,6 +172,9 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# switch to urgent window
+bindsym $mod+x [urgent=latest] focus
+
 # bindings to programs
 bindsym $mod+e exec thunar
 bindsym $mod+w exec firefox
