--- a/.config/i3/config
+++ b/.config/i3/config
@@ -206,6 +206,7 @@ workspace $ws9 output DP-2
 workspace $ws4 output DP-0
 workspace $ws5 output DP-0
 workspace $ws6 output DP-0
+workspace $ws8 output DP-0
 workspace $ws10 output DP-0
 
 # autostart
