--- a/.gitconfig
+++ b/.gitconfig
@@ -8,5 +8,21 @@
 [rerere]
 	enabled = true
 [maintenance]
-	repo = /home/jole/code/reditus/intern
-	repo = /home/jole/.dotfiles
+    repo = ~/.dotfiles
+	repo = ~/code/reditus/intern
+
+# git-delta
+[include]
+	path = ~/.dotfiles/.local/share/catppuccin-delta/catppuccin.gitconfig
+[core]
+    pager = delta
+[interactive]
+    diffFilter = delta --color-only
+[delta]
+    side-by-side = true
+    features = catppuccin-mocha
+    navigate = true
+[merge]
+    conflictstyle = zdiff3
+[diff]
+    colorMoved = default
