--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".config/tmux/plugins/catppuccin-tmux"]
 	path = .config/tmux/plugins/catppuccin-tmux
 	url = https://github.com/catppuccin/tmux
+[submodule ".local/share/catppuccin-delta"]
+	path = .local/share/catppuccin-delta
+	url = https://github.com/catppuccin/delta.git
