--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Set true color
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides ",*-256color:Tc"
 
 # Start windows and panes at 1 instead of 0
 set -g base-index 1
