--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,8 +19,8 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 # Ctrl Shift Alt vim keys to move windows
-bind -n C-M-H swap-window -t -1
-bind -n C-M-L swap-window -t +1
+bind -n C-M-h swap-window -t -1 \; select-window -t -1
+bind -n C-M-l swap-window -t +1 \; select-window -t +1
 
 # Better key bindings for copy mode
 bind-key -T copy-mode y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send-keys -X clear-selection
