Make tmux visual selection work agagin

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,8 +23,8 @@ bind -n C-M-h swap-window -t -1 \; select-window -t -1
 bind -n C-M-l swap-window -t +1 \; select-window -t +1
 
 # Better key bindings for copy mode
-bind-key -T copy-mode y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send-keys -X clear-selection
-bind-key -T copy-mode Y send-keys -X copy-pipe-and-cancel "tmux paste-buffer"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; send-keys -X clear-selection
 bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "tmux paste-buffer"
 
