--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,9 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",*-256color:Tc"
 
+# Force zsh
+set-option -g default-shell /bin/zsh
+
 # Start windows and panes at 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
