--- a/.local/share/applications/3dslicer.desktop
+++ b/.local/share/applications/3dslicer.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=3dslicer
+Name=3D Slicer
 Comment=A free, open source and multi-platform software package widely used for medical, biomedical, and related imaging research
 Exec=Slicer
 Icon=3dslicer
