Move Cisco client to workspace 9

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -194,6 +194,7 @@ assign [class="^Slicer$"] → $ws7
 assign [class="^Wfica$"] → $ws8
 assign [class="^steam_app_.*$"] → $ws9
 assign [class="^PrismLauncher$"] → $ws9
+assign [class="^.*cisco.*$"] → $ws9
 assign [class="^Spotify$"] → $ws10
 
 # assign workspaces to specific screens
