Add terraforming-cologne to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,6 +5,9 @@ Host jole
 Host reditus
     User root
     HostName mom.reditus.de
+Host terraforming-cologne
+    User root
+    HostName terraforming-cologne.de
 
 # Home
 Host pi
