--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Force zsh
+set-option -g default-shell /bin/zsh
+
 # Set vi-mode
 set-window-option -g mode-keys vi
 
@@ -44,6 +47,18 @@ bind - split-window -v -c "#{pane_current_path}"
 # tmux-sessionizer
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 
+# C-w mappings for navigating between nvim and tmux
+is_nvim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?nvim?x?)(diff)?$'"
+bind-key -n C-w if-shell "$is_nvim" "send-keys C-w" "switch-client -T nvimtable"
+bind-key -T nvimtable C-h select-pane -L \; switch-client -T root
+bind-key -T nvimtable C-j select-pane -D \; switch-client -T root
+bind-key -T nvimtable C-k select-pane -U \; switch-client -T root
+bind-key -T nvimtable C-l select-pane -R \; switch-client -T root
+bind-key -T nvimtable h select-pane -L \; switch-client -T root
+bind-key -T nvimtable j select-pane -D \; switch-client -T root
+bind-key -T nvimtable k select-pane -U \; switch-client -T root
+bind-key -T nvimtable l select-pane -R \; switch-client -T root
+
 # color scheme
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "basic"
@@ -59,4 +74,3 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 # Load plugins
 run '~/.config/tmux/plugins/catppuccin-tmux/catppuccin.tmux'
 run '~/.config/tmux/plugins/tmux-sensible/sensible.tmux'
-run '~/.config/tmux/plugins/vim-tmux-navigator/vim-tmux-navigator.tmux'
