--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,11 +1,9 @@
-[general]
-import = [
-  "~/.config/alacritty/catppuccin-mocha.toml",
+general.import = [
+  "../../.local/share/catppuccin-alacritty/catppuccin-mocha.toml"
 ]
 
 [env]
 TERM = "xterm-256color"
-WINIT_X11_SCALE_FACTOR = "1"
 
 [font]
-size = 13.0
+size = 12.0
