--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,7 +2,15 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
     <alias>
+        <family>sans-serif</family>
+        <prefer><family>Noto Sans</family></prefer>
+    </alias>
+    <alias>
+        <family>serif</family>
+        <prefer><family>Noto Serif</family></prefer>
+    </alias>
+    <alias>
         <family>monospace</family>
-        <prefer><family>JetBrainsMono NF</family></prefer>
+        <prefer><family>JetBrainsMono Nerd Font</family></prefer>
     </alias>
 </fontconfig>
