--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -168,6 +168,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    force_split = 2
 }
 
 # See https://wiki.hypr.land/Configuring/Master-Layout/ for more
@@ -209,10 +210,11 @@ bind = $mainMod, W, exec, firefox
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, Space, togglefloating,
-bind = $mainMod, D, exec, menu.sh
+bind = $mainMod, D, exec, menu
 bind = $mainMod, F, fullscreen
 bind = $mainMod, R, exec, hyprctl reload && notify-send "Successfully reloaded Hyprland"
 bind = $mainMod, O, exec, hyprlock
+bind = $mainMod, Z, exec, jolepods
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
