--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,41 +15,15 @@ monitor = DP-2, 2560x1440@144, 2560x0, 1
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = [workspace 1 silent] alacritty
-exec-once = [workspace 2 silent] firefox
-exec-once = [workspace 10 silent] spotify-launcher
-
-exec-once = nextcloud &
-exec-once = nm-applet &
-exec-once = waybar & hyprpaper &
-exec-once = systemctl --user start hyprpolkitagent
-
-# NOTE: Fix `hyprctl` not working inside tmux session
-exec-once = tmux set-env -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
+exec-once = alacritty
+exec-once = firefox
+exec-once = spotify-launcher
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,catppuccin-mocha-lavender-cursors
-env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,catppuccin-mocha-lavender-cursors
-
-env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 ###################
 ### PERMISSIONS ###
@@ -71,10 +45,6 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 #####################
 ### LOOK AND FEEL ###
 #####################
-
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
-exec = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-mocha-lavender-standard+default"
-env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
@@ -182,8 +152,8 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = de
+    kb_variant = us
     kb_model =
     kb_options =
     kb_rules =
@@ -302,14 +272,17 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 workspace = 1, monitor:DP-1, default:true
 workspace = 2, monitor:DP-1
+workspace = 3, monitor:DP-1
 
+workspace = 4, monitor:DP-2
 workspace = 5, monitor:DP-2
 workspace = 6, monitor:DP-2
 workspace = 7, monitor:DP-2
-workspace = 10, monitor:DP-2
+workspace = 10, monitor:DP-2, default:true
 
 windowrule = workspace 2, class:firefox
-windowrule = workspace 5, class:Signal
+windowrule = workspace 5, class:signal
 windowrule = workspace 6, class:discord
 windowrule = workspace 6, class:teamspeak
 windowrule = workspace 7, class:steam
+windowrule = workspace 10, class:Spotify
