--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -185,6 +185,10 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, R, exec, hyprctl reload && notify-send "Successfully reloaded Hyprland"
 bind = $mainMod, O, exec, hyprlock
 bind = $mainMod, Z, exec, jolepods
+bind = , Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')" - | wl-copy
+bind = CTRL, Print, exec, slurp | grim -g - - | wl-copy
+bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')"
+bind = $mainMod CTRL, Print, exec, slurp | grim -g -
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
