--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,10 @@ monitor = DP-2, 2560x1440@144, 2560x0, 1
 exec-once = alacritty
 exec-once = firefox
 exec-once = spotify-launcher
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hyprpolkitagent
+exec-once = uwsm app -- hyprsunset
+exec-once = uwsm app -- waybar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -185,6 +189,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, R, exec, hyprctl reload && notify-send "Successfully reloaded Hyprland"
 bind = $mainMod, O, exec, hyprlock
 bind = $mainMod, Z, exec, jolepods
+bind = $mainMod, N, exec, nightlight
 bind = , Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')" - | wl-copy
 bind = CTRL, Print, exec, slurp | grim -g - - | wl-copy
 bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')"
