--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
 gtk-theme-name = catppuccin-mocha-lavender-standard+default
-gtk-icon-theme-name = Tela-circle-blue-dark
+gtk-icon-theme-name = Yaru-purple-dark
 gtk-cursor-theme-name = catppuccin-mocha-lavender-cursors
 gtk-application-prefer-dark-theme = true
