--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,8 +5,9 @@ source = $HOME/.local/share/catppuccin-hyprland/themes/mocha.conf
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor = DP-1, 2560x1440@144, 0x0, 1
-monitor = DP-2, 2560x1440@144, 2560x0, 1
+# monitor = DP-1, 2560x1440@144, 0x0, 1
+# monitor = DP-2, 2560x1440@144, 2560x0, 1
+monitor = eDP-1, 1920x1080@60, 0x0, 1 # TODO: jolelaptop
 
 #################
 ### AUTOSTART ###
@@ -15,15 +16,48 @@ monitor = DP-2, 2560x1440@144, 2560x0, 1
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = alacritty
-exec-once = firefox
-exec-once = spotify-launcher
+exec-once = uwsm app -- systemctl --user start hyprpolkitagent
+exec-once = uwsm app -- hypridle
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hyprsunset
+
+exec-once = uwsm app -- alacritty
+exec-once = uwsm app -- firefox
+exec-once = uwsm app -- spotify-launcher
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
+
+# Cursor size
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+
+# Force all apps to use Wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+
+xwayland {
+  force_zero_scaling = true
+}
+
+# Use XCompose file
+env = XCOMPOSEFILE,~/.XCompose
+
+# Don't show update on first launch
+ecosystem {
+  no_update_news = true
+}
 
 ###################
 ### PERMISSIONS ###
@@ -146,6 +180,13 @@ master {
     new_status = master
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering  = true
+    focus_on_activate = true
+}
+
 #############
 ### INPUT ###
 #############
@@ -175,23 +216,24 @@ input {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, alacritty
-bind = $mainMod, W, exec, firefox
-bind = $mainMod, Q, killactive,
-bind = $mainMod, E, exec, thunar
-bind = $mainMod, Space, togglefloating,
+bind = $mainMod, R, exec, reload
 bind = $mainMod, D, exec, menu
-bind = $mainMod, F, fullscreen
-bind = $mainMod, R, exec, hyprctl reload && notify-send "Successfully reloaded Hyprland"
-bind = $mainMod, O, exec, hyprlock
-bind = $mainMod, Z, exec, jolepods
-bind = $mainMod, N, exec, nightlight
+bind = $mainMod, O, exec, loginctl lock-session
+
+bind = $mainMod, Return, exec, uwsm app -- alacritty
+bind = $mainMod, W, exec, uwsm app -- firefox
+bind = $mainMod, E, exec, uwsm app -- nautilus --new-window
+bind = $mainMod, Z, exec, uwsm app -- jolepods
+bind = $mainMod, N, exec, uwsm app -- nightlight
+
 bind = , Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')" - | wl-copy
 bind = CTRL, Print, exec, slurp | grim -g - - | wl-copy
 bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')"
 bind = $mainMod CTRL, Print, exec, slurp | grim -g -
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+
+bind = $mainMod, Space, togglefloating,
+bind = $mainMod, Q, killactive,
+bind = $mainMod, F, fullscreen
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -275,15 +317,15 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-workspace = 1, monitor:DP-1, default:true
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1
-
-workspace = 4, monitor:DP-2
-workspace = 5, monitor:DP-2
-workspace = 6, monitor:DP-2
-workspace = 7, monitor:DP-2
-workspace = 10, monitor:DP-2, default:true
+# TODO: jolelaptop
+# workspace = 1, monitor:DP-1, default:true
+# workspace = 2, monitor:DP-1
+# workspace = 3, monitor:DP-1
+# workspace = 4, monitor:DP-2
+# workspace = 5, monitor:DP-2
+# workspace = 6, monitor:DP-2
+# workspace = 7, monitor:DP-2
+# workspace = 10, monitor:DP-2, default:true
 
 windowrule = workspace 2, class:firefox
 windowrule = workspace 5, class:signal
