--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,16 +1,44 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-    <alias>
-        <family>sans-serif</family>
-        <prefer><family>Noto Sans</family></prefer>
-    </alias>
-    <alias>
-        <family>serif</family>
-        <prefer><family>Noto Serif</family></prefer>
-    </alias>
-    <alias>
-        <family>monospace</family>
-        <prefer><family>JetBrainsMono Nerd Font</family></prefer>
-    </alias>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>sans-serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>Noto Sans</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>Noto Serif</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>monospace</string>
+    </test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>JetBrains Mono Nerd Font</string>
+    </edit>
+  </match>
+
+  <alias>
+    <family>system-ui</family>
+    <prefer>
+      <family>Noto Sans</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>ui-monospace</family>
+    <default>
+      <family>monospace</family>
+    </default>
+  </alias>
 </fontconfig>
