--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,4 +1,5 @@
 {
+    "reload_style_on_change": true,
     "layer": "top",
     "position": "top",
     "modules-left": ["hyprland/workspaces"],
@@ -8,20 +9,29 @@
         "format": "{name}"
     },
     "battery": {
-        "states": {
-            "warning": 30,
-            "critical": 15
+        "format": "{icon} {capacity}%",
+        "format-plugged":     "",
+        "format-icons": {
+            "charging": [
+                "󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"
+            ],
+            "default": [
+                "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"
+            ]
         },
-        "format": "{icon}",
-        "format-charging": "",
-        "format-plugged": "",
-        "format-alt": "{icon}",
-        "format-icons": ["", "",  "", "", "", "", "", "", "", "", "", ""]
+        "format-full": "󰂅",
+        "tooltip": false,
+        "interval": 5,
+        "states": {
+            "warning": 20,
+            "critical": 10
+        }
     },
     "backlight": {
         "device": "intel_backlight",
-        "format": "{icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
+        "format": "{icon} {percent}%",
+        "format-icons": ["", "", "", "", "", "", "", "", ""],
+        "tooltip": false
     },
     "pulseaudio": {
         "scroll-step": 5,
@@ -42,7 +52,8 @@
         "on-click": "blueman-manager",
         "on-click-right": "bluetoothctl power $(bluetoothctl show | grep \"Powered\" | awk '{print $2}' | sed 's/yes/off/;s/no/on/')",
         "format-connected": " {device_alias}",
-        "format-connected-battery": " {device_alias} {device_battery_percentage}%"
+        "format-connected-battery": " {device_alias} {device_battery_percentage}%",
+        "tooltip": false
     },
     "tray": {
         "icon-size": 16,
