Set smooth scrolling threshold for pulseaudio section in waybar

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -35,6 +35,7 @@
     },
     "pulseaudio": {
         "scroll-step": 5,
+        "smooth-scrolling-threshold": 5,
         "format": "{icon} {volume}%",
         "format-muted": "",
         "format-icons": {
