Reorganize dotfiles into folders to allow host-specific configuration

--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -1,13 +1,11 @@
 source = $HOME/.local/share/catppuccin-hyprland/themes/mocha.conf
+source = $HOME/.config/hypr/host.conf
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-# monitor = DP-1, 2560x1440@144, 0x0, 1
-# monitor = DP-2, 2560x1440@144, 2560x0, 1
-monitor = eDP-1, 1920x1080@60, 0x0, 1 # TODO: jolelaptop
 
 #################
 ### AUTOSTART ###
@@ -316,16 +314,6 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# TODO: jolelaptop
-# workspace = 1, monitor:DP-1, default:true
-# workspace = 2, monitor:DP-1
-# workspace = 3, monitor:DP-1
-# workspace = 4, monitor:DP-2
-# workspace = 5, monitor:DP-2
-# workspace = 6, monitor:DP-2
-# workspace = 7, monitor:DP-2
-# workspace = 10, monitor:DP-2, default:true
 
 windowrule = workspace 2, class:firefox
 windowrule = workspace 5, class:signal
