--- a/shared/.config/hypr/hypridle.conf
+++ b/shared/.config/hypr/hypridle.conf
@@ -5,12 +5,12 @@ general {
 }
 
 listener {
-    timeout = 300
+    timeout = 900 # 15 minutes
     on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 330
+    timeout = 930
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on && brightnessctl -r
 }
