--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -47,6 +47,9 @@ bind - split-window -v -c "#{pane_current_path}"
 # tmux-sessionizer
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 
+# tmux-windowizer
+bind-key -r g run-shell "tmux new-window tmux-windowizer"
+
 # C-w mappings for navigating between nvim and tmux
 is_nvim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?nvim?x?)(diff)?$'"
 bind-key -n C-w if-shell "$is_nvim" "send-keys C-w" "switch-client -T nvimtable"
