--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -216,6 +216,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, R, exec, reload
 bind = $mainMod, D, exec, menu
+bind = $mainMod, I, exec, toggle_idle
 bind = $mainMod, O, exec, uwsm app -- hyprlock
 
 bind = $mainMod, Return, exec, uwsm app -- alacritty
