--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $lavender $mauve 45deg
+    col.active_border = $lavender
     col.inactive_border = rgba($overlay0Alphaaa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
