--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -23,6 +23,7 @@ exec-once = uwsm app -- waybar
 exec-once = uwsm app -- alacritty
 exec-once = uwsm app -- firefox
 exec-once = uwsm app -- spotify-launcher
+exec-once = uwsm app -- nextcloud
 
 #############################
 ### ENVIRONMENT VARIABLES ###
