Brightness in waybar

--- a/shared/.config/waybar/config.jsonc
+++ b/shared/.config/waybar/config.jsonc
@@ -37,7 +37,9 @@
         }
     },
     "backlight": {
-        "device": "intel_backlight",
+        "on-scroll-up": "brightness brighter",
+        "on-scroll-down": "brightness darker",
+        "smooth-scrolling-threshold": 5,
         "format": "{icon}  {percent}%",
         "format-icons": ["", "", "", "", "", "", "", "", ""],
         "tooltip": false
