--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -194,7 +194,7 @@ input {
     kb_layout = de
     kb_variant = us
     kb_model =
-    kb_options =
+    kb_options = ctrl:nocaps
     kb_rules =
 
     follow_mouse = 1
