Add reditus Office desktop file

--- a/shared/.local/share/applications/reditus_office.desktop
+++ b/shared/.local/share/applications/reditus_office.desktop
@@ -2,8 +2,8 @@
 Version=1.0
 Name=reditus Office
 Comment=reditus Office
-Exec=chromium --new-window --ozone-platform=wayland --app=https://officetest.reditus.de/@/reditus-campus --name="reditus Office" --class="reditus Office"
+Exec=chromium --new-window --ozone-platform=wayland --app=https://office.reditus.de/@/reditus-campus#start&moveTo=1842,1500 --name="reditus Office" --class="reditus Office"
 Terminal=false
 Type=Application
-Icon=/home/jole/.local/share/applications/icons/reditus_office.png
+Icon=/home/jole/.local/share/applications/icons/reditus.png
 StartupNotify=true
