--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -317,6 +317,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = workspace 2, class:firefox
+windowrule = workspace 4, class:.*office.reditus.de.*
 windowrule = workspace 5, class:signal
 windowrule = workspace 6, class:discord
 windowrule = workspace 6, class:teamspeak
