--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -65,8 +65,8 @@ bind-key -T nvimtable l select-pane -R \; switch-client -T root
 # color scheme
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "basic"
-set -g @catppuccin_window_current_text " #{b:pane_current_path}"
-set -g @catppuccin_window_text " #{b:pane_current_path}"
+set -g @catppuccin_window_current_text " #{b:pane_current_command}"
+set -g @catppuccin_window_text " #{b:pane_current_command}"
 set -g @catppuccin_status_background none
 set -g status-right-length 100
 set -g status-left-length 100
