--- a/shared/.config/waybar/config.jsonc
+++ b/shared/.config/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "layer": "top",
     "position": "top",
     "modules-left": ["hyprland/workspaces"],
-    "modules-right": ["cpu", "temperature", "battery", "backlight", "pulseaudio", "clock", "bluetooth", "tray"],
+    "modules-right": ["cpu", "temperature", "battery", "backlight", "pulseaudio", "clock", "bluetooth", "network", "tray"],
     "hyprland/workspaces": {
         "sort-by-number": true,
         "format": "{name}"
@@ -66,6 +66,14 @@
         "format-connected": " {device_alias}",
         "format-connected-battery": " {device_alias} {device_battery_percentage}%",
         "tooltip": false
+    },
+    "network": {
+        "format": "{ifname}",
+        "format-wifi": "  {essid} ({signalStrength}%)",
+        "format-ethernet": "󰊗  {ipaddr}/{cidr}",
+        "format-disconnected": "",
+        "interval": 30,
+        "on-click": "alacritty -e impala"
     },
     "tray": {
         "icon-size": 16,
