Fix Spotify window class name

--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -20,6 +20,8 @@ exec-once = uwsm app -- hyprpaper
 exec-once = uwsm app -- hyprsunset
 exec-once = uwsm app -- waybar
 
+exec-once = uwsm app -- safeeyes
+
 exec-once = uwsm app -- alacritty
 exec-once = uwsm app -- firefox
 exec-once = uwsm app -- nextcloud
@@ -322,4 +324,4 @@ windowrule = workspace 5, class:signal
 windowrule = workspace 6, class:discord
 windowrule = workspace 6, class:teamspeak
 windowrule = workspace 7, class:steam
-windowrule = workspace 10, class:Spotify
+windowrule = workspace 10, class:spotify
