Update ssh config

--- a/shared/.ssh/config
+++ b/shared/.ssh/config
@@ -1,13 +1,19 @@
 # Public
 Host jole
     User jole
-    HostName jole.dev
-Host reditus
+    HostName 46.38.242.139
+Host mom
     User root
-    HostName mom.reditus.de
+    HostName 65.108.241.82
+Host prod.reditus
+    User root
+    HostName 78.46.162.204
+Host test.reditus
+    User root
+    HostName 88.198.147.0
 Host terraforming-cologne
     User root
-    HostName terraforming-cologne.de
+    HostName 49.12.71.187
 
 # Home
 Host pi
