Update config for new Hyprland and hyprpaper versions

--- a/shared/.config/hypr/hyprpaper.conf
+++ b/shared/.config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = $HOME/.local/share/wallpapers/catppuccin.png
-wallpaper = , $HOME/.local/share/wallpapers/catppuccin.png
+wallpaper {
+    monitor =
+    path = $HOME/.local/share/wallpapers/catppuccin.png
+}
+
+splash = false
